--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <title>Thailandddd</title>
+
 </head>
 <body>
     <h1>ohlalala</h1>
