--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
 
 </head>
 <body>
-    <h1>ohlalala</h1>
-    <script src="https://d3js.org/d3.v6.js"></script>
+    <div id="frame1">
+        <h1>กีฬา กีฬา เป็นยาวิเศษ</h1>
+        <a title="Dave Johnston, Copyrighted free use, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Animated-Flag-Thailand.gif"><img width="128" alt="Animated-Flag-Thailand" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Animated-Flag-Thailand.gif"></a>
+        <h1>มาลองทายกันว่าประเทศไทยเคยได้เหรีญทองใน SEA Games มากที่สุดกี่เหรียญ</h1>
+        <div>
+            <svg width="1000" height="120" >
+                <circle cx="40" cy="60" r="30"></circle>
+                <text x="40" y="60" fill="white" text-anchor="middle" alignment-baseline="middle">1999</text>
+                <circle cx="140" cy="60" r="30"></circle>
+                <text x="140" y="60" fill="white" text-anchor="middle" alignment-baseline="middle">1998</text>
+                <circle cx="240" cy="60" r="30"></circle>
+                <text x="240" y="60" fill="white" text-anchor="middle" alignment-baseline="middle">1997</text>
+            </svg>
+        </div>
+        <div>
+            <button>ไปดูกันเลย!</button>
+        </div>
+    </div>
+    <div id="frame2">
+        
+    </div>
     <div id="my_dataviz"></div>
+    <script src="https://d3js.org/d3.v6.js"></script>
 </body>
 <script>
 
