--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+    <script src="https://d3js.org/d3.v6.js"></script>
     <div id="frame1">
         <h1>กีฬา กีฬา เป็นยาวิเศษ</h1>
         <a title="Dave Johnston, Copyrighted free use, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Animated-Flag-Thailand.gif"><img width="128" alt="Animated-Flag-Thailand" src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Animated-Flag-Thailand.gif"></a>
@@ -25,7 +26,7 @@
         </div>
     </div>
     <div id="frame2">
-        
+        <div id="graphMax"></div>
     </div>
     <div id="my_dataviz"></div>
     <script src="https://d3js.org/d3.v6.js"></script>
