--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <script src="showGold.js"></script>
         </div>
     </div>
-    <div id="frame4"></div>
+    <div id="frame4">
+        <div id="pieChart">
+            <script src="https://d3js.org/d3.v6.js"></script>
+            <script src="pieChart.js"></script>
+        </div>
+
+    </div>
 </body>
 </html>
