--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <div id="graphGoldAll">
             <script src="https://d3js.org/d3.v6.js"></script>
             <script src="showGold.js"></script>
+            <a href="https://d3-graph-gallery.com/graph/lollipop_basic.html">original version of this chart</a>
+
         </div>
     </div>
     <div id="frame4">
@@ -50,6 +52,7 @@
             And I baked something special for you! <br> A colourful 3D pie chart! Made with ❤️ and d3
             <script src="https://d3js.org/d3.v6.js"></script>
             <script src="pieChart.js"></script>
+            <a href="https://observablehq.com/@bumbeishvili/3d-pie-chart">original version of this chart</a>
         </div>
 
     </div>
