--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     </div>
     <div id="frame3">
+        <div>Gold medals Thailand has received in SEA Games 1959-2023</div>
         <div id="graphGoldAll">
+            
             <script src="https://d3js.org/d3.v6.js"></script>
             <script src="showGold.js"></script>
             <a href="https://d3-graph-gallery.com/graph/lollipop_basic.html">original version of this chart</a>
@@ -49,7 +51,7 @@
     </div>
     <div id="frame4">
         <div id="pieChart">
-            And I baked something special for you! <br> A colourful 3D pie chart! Made with ❤️ and d3
+            And I baked something special for you! <br> A colourful 3D pie chart! Made with ❤️ and d3<br>
             <script src="https://d3js.org/d3.v6.js"></script>
             <script src="pieChart.js"></script>
             <a href="https://observablehq.com/@bumbeishvili/3d-pie-chart">original version of this chart</a>
